plugins {
    id 'com.android.library'
    id 'maven-publish'
}

apply plugin: 'com.android.library'
apply plugin: 'kotlin-android'

android {
    compileSdkVersion 33
    buildToolsVersion '33.0.0'

    defaultConfig {
        minSdkVersion 19
        targetSdkVersion 33
        renderscriptTargetApi 17
        renderscriptSupportModeEnabled false
    }

    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
        }
    }

    compileOptions {
        sourceCompatibility JavaVersion.VERSION_17
        targetCompatibility JavaVersion.VERSION_17
    }

    namespace 'com.codepan'

    packagingOptions {
        exclude 'META-INF/LICENSE'
        exclude 'META-INF/NOTICE'
        exclude 'META-INF/DEPENDENCIES'
        exclude 'META-INF/LICENSE.txt'
        exclude 'META-INF/NOTICE.txt'
        exclude 'META-INF/DEPENDENCIES.txt'
    }
}


task androidSourcesJar(type: Jar) {
    from android.sourceSets.main.java.srcDirs
}

project.afterEvaluate {
    publishing {
        publications {
            release(MavenPublication) {
                from components.release
                artifact androidSourcesJar // optional sources
            }
        }
    }
}

dependencies {
    api fileTree(include: ['*.jar'], dir: 'libs')
    api 'androidx.legacy:legacy-support-v4:1.0.0'
    api 'net.zetetic:android-database-sqlcipher:4.5.0'
    api 'com.github.barteksc:android-pdf-viewer:2.8.1'
    api 'com.nostra13.universalimageloader:universal-image-loader:1.9.5'
    api 'com.google.android.gms:play-services-location:21.0.1'
    api 'com.google.android.gms:play-services-maps:18.1.0'
    api 'com.google.maps.android:android-maps-utils:0.5'
    api 'androidx.recyclerview:recyclerview:1.3.0'
    api 'com.google.android:flexbox:2.0.1'
    api "androidx.core:core-ktx:1.10.0"
    api 'com.google.mlkit:vision-common:17.3.0'
    api 'com.google.android.gms:play-services-mlkit-face-detection:17.1.0'
    def camerax_version = "1.2.3"
    api "androidx.camera:camera-core:${camerax_version}"
    api "androidx.camera:camera-camera2:${camerax_version}"
    api "androidx.camera:camera-lifecycle:${camerax_version}"
    api "androidx.camera:camera-video:${camerax_version}"
    api "androidx.camera:camera-view:${camerax_version}"
    api "androidx.camera:camera-extensions:${camerax_version}"
    api 'androidx.window:window:1.0.0-alpha09'
    api 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.1'
    api 'androidx.concurrent:concurrent-futures-ktx:1.1.0'
    api "androidx.exifinterface:exifinterface:1.3.6"
    api "com.squareup.okhttp3:okhttp:4.11.0"
}